Import of BERNHARD/Crypt-NSS-X509-0.02 from CPAN.
gitpan-cpan-distribution: Crypt-NSS-X509
gitpan-cpan-version:      0.02
gitpan-cpan-path:         BERNHARD/Crypt-NSS-X509-0.02.tar.gz
gitpan-cpan-author:       BERNHARD
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -30,4 +30,4 @@ resources:
   bugtracker: https://github.com/amannb/perl-nss/issues
   homepage: https://github.com/amannb/perl-nss
   license: http://opensource.org/licenses/mozilla1.1.php
-version: 0.02_01
+version: 0.02
