--- a/META.yml
+++ b/META.yml
@@ -22,6 +22,7 @@ no_index:
     - t
 requires:
   Alien::NSS: 0.05
+  Encode: 2.4
   Exporter: 5.6
   MIME::Base64: 3.13
   autodie: 2.1
@@ -31,4 +32,5 @@ resources:
   homepage: https://github.com/amannb/perl-nss
   license: http://opensource.org/licenses/mozilla1.1.php
   repository: git://github.com/amannb/perl-nss.git
-version: 0.03_03
+version: 0.03
+
