--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: 'Perl interface for the certificate handling parts of the NSS api.'
 author:
-  - 'Bernhard Amann, <bernhard@icsi.berkeley.edu>'
+  - 'Johanna Amann, <johanna@icir.org>'
 build_requires:
   ExtUtils::MakeMaker: 6.59
   Test::More: 0.98
@@ -10,7 +10,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.06'
+generated_by: 'Module::Install version 1.08'
 license: mozilla
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -28,9 +28,8 @@ requires:
   autodie: 2.1
   perl: 5.10.1
 resources:
-  bugtracker: https://github.com/amannb/perl-nss/issues
-  homepage: https://github.com/amannb/perl-nss
+  bugtracker: https://github.com/0xxon/perl-nss/issues
+  homepage: https://github.com/0xxon/perl-nss
   license: http://opensource.org/licenses/mozilla1.1.php
-  repository: git://github.com/amannb/perl-nss.git
-version: 0.03
-
+  repository: git://github.com/0xxon/perl-nss.git
+version: '0.04'
